--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,208 @@
+body {
+  background-color: black;
+  margin: 0px;
+}
 
+header {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  background-color: rgb(0, 0, 0, 20%);
+  top: 0px;
+  right: 0px;
+  z-index: 10000;
+}
+
+.fa {
+  font-size: 1.6rem;
+  color: white;
+}
+
+#about {
+  position: fixed;
+  display: flex;
+  gap: 60px;
+  top: 14px;
+  left: 40px;
+}
+
+#about * {
+  font-size: 1.1rem;
+  font-family: "Ubuntu";
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
+
+#social-media {
+  position: fixed;
+  display: flex;
+  gap: 25px;
+  top: 10px;
+  right: 10px;
+  color: white;
+}
+
+#start-video {
+  position: fixed;
+  object-fit: cover;
+  top: -20px;
+  width: 100vw;
+  height: 106vh;
+  opacity: 40%;
+  z-index: -100;
+}
+
+#hello-text {
+  position: absolute;
+  bottom: 10%;
+  right: 5%;
+  color: white;
+  opacity: 90%;
+  font-size: 8vw;
+  font-family: "Open Sans", sans-serif;
+}
+
+#welcome-section {
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 25%;
+  width: 80%;
+  background: linear-gradient(
+    90deg,
+    rgb(60, 60, 80),
+    black 10% 90%,
+    rgb(60, 60, 80)
+  );
+  margin-top: 104vh;
+}
+
+.intro {
+  position: relative;
+  top: 5rem;
+  right: -10px;
+  width: 40vw;
+  padding: 5vw;
+  height: 30vw;
+  background-color: rgb(60, 60, 80);
+  border-radius: 50%;
+  font-family: "Open Sans";
+  font-size: 1.5vw;
+  color: white;
+  box-shadow: 40px 40px 40px 40px rgba(60, 60, 80, 0.25);
+  transition: transform 0.5s ease-in-out;
+}
+
+.intro:nth-of-type(2) {
+  text-align: center;
+}
+
+.intro-text.smaller {
+  font-size: 2.5vw;
+}
+
+.intro.right {
+  margin-left: 32%;
+  margin-top: 35px;
+}
+
+#projects {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  top: 4rem;
+  gap: 0px;
+  justify-content: center;
+  height: 50vw;
+  z-index: 1000;
+  margin-top: 5rem;
+}
+
+.project-tile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 44%;
+  background-size: contain;
+  z-index: 100;
+  transition: opacity 0.2s ease-in-out 0ms;
+  text-decoration: none;
+}
+
+.project-tile p {
+  text-align: center;
+  font-size: 3.2vw;
+  color: white;
+  font-family: Ubuntu;
+  display: none;
+}
+
+.project-tile:hover {
+  opacity: 50%;
+}
+
+.project-tile:hover p {
+  display: block;
+}
+
+.project-tile:nth-of-type(1) {
+  background-image: url(https://i.ibb.co/4gpC5kpk/Screenshot-2025-02-05-120158.png);
+}
+
+.project-tile:nth-of-type(2) {
+  background-image: url(https://i.ibb.co/7Ngx5ygN/Screenshot-2025-02-05-123915.png);
+}
+
+.project-tile:nth-of-type(3) {
+  background-image: url(https://i.ibb.co/pB2jNc6K/Screenshot-2025-02-05-123936.png);
+}
+
+.project-tile:nth-of-type(4) {
+  background-image: url(https://i.ibb.co/sdWvqJNg/Screenshot-2025-02-05-123954.png);
+}
+
+.project-tile:nth-of-type(5) {
+  background-image: url(https://i.ibb.co/TxxHPC8C/Screenshot-2025-02-05-124014.png);
+}
+
+.project-tile:nth-of-type(6) {
+  background-image: url(https://i.ibb.co/x8350D6D/Screenshot-2025-02-05-124229.png);
+}
+
+.intro:hover {
+  transform: scale(1.1);
+}
+
+.intro-text {
+  font-size: 200%;
+}
+
+@media only screen and (max-width: 840px) {
+  .project-tile {
+    width: 100%;
+    height: 88%;
+  }
+
+  #welcome-section {
+    padding-bottom: calc(230% + 3.2rem);
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .intro {
+    display: block;
+    margin: auto;
+    margin-bottom: 1.2rem;
+    width: 60vw;
+    height: 40vw;
+    padding-top: 20vw;
+    text-align: center;
+  }
+
+  .intro.right {
+    display: block;
+    margin: auto;
+  }
+}
